<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="36dp"
        android:onClick="openCameraApp"
        android:text="@string/cameraButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="229dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="36dp"
        android:onClick="openSearchActivity"
        android:text="Filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/previousPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="107dp"
        android:onClick="previousOrNextPhoto"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24px" />

    <ImageButton
        android:id="@+id/nextPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="107dp"
        android:onClick="previousOrNextPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24px" />

    <Button
        android:id="@+id/captionButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="33dp"
        android:layout_marginStart="36dp"
        android:onClick="captionAlertDialog"
        android:text="Caption"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="36dp"
        android:onClick="showPhotos"
        android:text="All"
        app:layout_constraintBottom_toTopOf="@+id/filterButton"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>